--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
 pluggy==1.3.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pycparser==2.22
 pydantic==2.5.3
 pydantic_core==2.14.6
