--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-contourpy==1.3.1
+contourpy>=1.3.1
 cryptography==44.0.1
 cycler==0.12.1
 Django==4.2.7
@@ -30,9 +30,9 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.8
 MarkupSafe==2.1.3
-matplotlib==3.8.3
+matplotlib>=3.8.3,<3.10
 msal==1.31.1
-numpy==2.2.4
+numpy>=1.21,<2
 oauthlib==3.2.2
 openpyxl==3.1.5
 packaging==24.2
